--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-fastapi==0.110.1
-google-ai-generativelanguage==0.4.0
-google-api-core==2.18.0
-google-auth==2.29.0
-google-generativeai==0.4.1
-google-pasta==0.2.0
-googleapis-common-protos==1.63.0
-h11==0.14.0
-h5py==3.10.0
-keras==3.1.1
-matplotlib==3.8.4
-numpy==1.26.4
-python-multipart==0.0.9
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-hub==0.16.1
-tensorflow-io-gcs-filesystem==0.36.0
-tf_keras==2.16.0
-uvicorn==0.29.0
+fastapi
+google-ai-generativelanguage
+google-api-core
+google-auth
+google-generativeai
+google-pasta
+googleapis-common-protos
+h11
+h5py
+keras
+matplotlib
+numpy
+python-multipart
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-hub
+tensorflow-io-gcs-filesystem
+tf_keras
+uvicorn
